plugins {
    id 'java'
    id 'application'
}

group = 'org.invaders'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    // JUnit Jupiter
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
    testImplementation 'org.junit.platform:junit-platform-commons:1.8.1'
    testImplementation 'org.junit.platform:junit-platform-engine:1.8.1'

    // Jackson
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'

    // Reflections
    implementation 'org.reflections:reflections:0.10.2'

    // Other dependencies
    implementation 'org.javassist:javassist:3.28.0-GA'
    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'io.github.javaunit:autoparams:0.2.3'
    implementation 'org.opentest4j:opentest4j:1.2.0'
    implementation 'org.apiguardian:apiguardian-api:1.1.2'
}

application {
    mainClass = 'engine.Core'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_23
    targetCompatibility = JavaVersion.VERSION_23
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['res']
        }
    }
    test {
        java {
            srcDirs = ['test']
        }
    }
}